--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width">
+content="width=device-width">
         <title>Simple project </title>
         <link rel="stylesheet" href="222.css">
       </head>
